tests/error/struct_errors/inheritance.err
Error: Unsupported (at $FILE:9:15)
  | 
7 | 
8 | @guppy.struct(module)
9 | class MyStruct(int):
  |                ^^^ Struct inheritance is not supported

Guppy compilation failed due to 1 previous error
